# cs499

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
8-2_Assignment/: 8-2_Assignment.sln  8-2_Assignment.vcxproj  8-2_Assignment.vcxproj.filters  Brick.cpp  Brick.h  Circle.cpp  Circle.h  Collision.cpp  Collision.h  DataAccess.cpp  DataAccess.h  GameMath.h  Grid.h  Input.cpp  Input.h  Level.h  Paddle.cpp  Paddle.h  PlatformFixes.h  PowerUp.h
8-2_Assignment/8-2_Assignment/Debug/: 8-2_Assignment.exe.recipe  vc143.idb
8-2_Assignment/8-2_Assignment/Debug/8-2_Assignment.tlog/: 8-2_Assignment.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.secondary.1.tlog
8-2_Assignment/8-2_Assignment/x64/Debug/: 8-2_Assignment.exe.recipe  8-2_Assignment.ilk  8-2_Assignment.vcxproj.FileListAbsolute.txt  vc143.idb
8-2_Assignment/8-2_Assignment/x64/Debug/8-2_Assignment.tlog/: 8-2_Assignment.lastbuildstate  8-2_Assignment.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
8-2_Assignment/Debug/: 8-2_Assignment.ilk  vc143.idb
8-2_Assignment/Debug/8-2_Assignment.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.write.1.tlog
8-2_Assignment/Source/: MainCode.cpp
8-2_Assignment/x64/Debug/: game.db-shm  game.db-wal
